<resources>
    <string name="app_name">Kwala</string>

    <!-- Common -->
    <string name="common_begin">begin</string>
    <string name="common_create">create</string>

    <!-- Test -->
    <string name="test_first_name">Brittany</string>
    <string name="test_last_name">Chipmunk</string>
    <string name="test_full_name">Brittany Chipmunk</string>
    <string name="test_profile_name">Brittany\nChipmunk</string>
    <string name="test_age">20</string>
    <string name="test_profile_age">Age: 20</string>
    <string name="test_description">Hi! I was born in Chipmunk City, MO. I spend most of my days eating and storing nuts. I promise I won’t do that to you ;) I’m working on a B.S. in Nutology and looking for someone to build a nest with!</string>

    <!-- Login -->
    <string name="login_email">email</string>
    <string name="login_password">password</string>
    <string name="login_title">Kwala</string>
    <string name="login_button">login</string>
    <string name="registration_button">continue</string>
    <string name="sign_up">Not a member yet? Sign up!</string>

    <!-- Quiz -->
    <string name="quiz_empty_state_string">Take a personality quiz to determine your compatibility with others.</string>

    <!-- Filters -->
    <string name="filters_empty_state_string">Looks like you don\’t have any filters set up yet.\n\nCreate your first to get started!</string>
    <string name="filters_love_interest_string">Love Interest</string>
    <string name="filters_coffee_buddy_string">Coffee Buddy</string>
    <string name="filters_study_buddy_string">Study Buddy</string>
    <string name="filters_workout_buddy_string">Workout Buddy</string>
    <string name="filters_buddy_string">Buddy</string>
    <string name="filters_one_night_stand">One Night Stand ;)</string>
    <string name="filter_activity_permanent">Permanent</string>
    <string name="filter_activity_time_limit">One hour time limit</string>
    <string name="filter_activity_male">Male</string>
    <string name="filter_activity_female">Female</string>
    <string name="filter_activity_interests">Interests</string>

    <!-- Matches -->
    <string name="matches_empty_state_string">No matches yet!</string>

    <!-- Profile -->
    <string name="profile_name_formatted">%1$s\n%2$s</string>
    <string name="profile_age_formatted">Age: %s</string>

    <!-- Settings -->
    <string name="settings_do_not_disturb">Do not disturb</string>
    <string name="settings_sign_out">sign out</string>

</resources>
