<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <ImageView
        android:id="@+id/title"
        android:layout_width="200dp"
        android:layout_height="75dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"

        android:src="@drawable/logo"
        />

    <com.kwala.app.helpers.views.KwalaEditText
        android:id="@+id/login_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:layout_margin="20dp"

        android:hint="@string/login_email"
        android:inputType="textEmailAddress"
        />

    <com.kwala.app.helpers.views.KwalaEditText
        android:id="@+id/login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_email"
        android:layout_margin="20dp"

        android:hint="@string/login_password"
        android:inputType="textPassword"
        />

    <com.kwala.app.helpers.views.KwalaButton
        android:id="@+id/login_login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="20dp"

        android:text="@string/login_button"
        android:textSize="20sp"
        />

</RelativeLayout>