<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@drawable/background">

    <android.support.v7.widget.Toolbar
        android:id="@+id/base_toolbar_activity_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#CCC4C3C3"
        android:elevation="10dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@id/base_toolbar_activity_toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <ImageView
                android:id="@+id/filter_activity_2_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_alignParentLeft="true"

                android:layout_marginBottom="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                tools:src="@drawable/filter_arrows_icon" />

            <TextView
                android:id="@+id/filter_activity_2_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginLeft="5dp"

                tools:text="Buddy"
                android:textSize="36sp"
                android:textColor="@color/kWhite"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"

            android:background="@color/filterLineColor"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="15dp"

            android:orientation="vertical">

            <RadioGroup
                android:id="@+id/filter_activity_2_time_radio_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp">

                <com.kwala.app.helpers.views.KwalaRadioButton
                    android:id="@+id/filter_activity_2_permanent_radio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:onClick="onFilter2RadioButtonClicked"

                    android:text="@string/filter_activity_permanent"
                    android:textSize="20sp"
                    android:textColor="@color/kWhite"
                    />

                <com.kwala.app.helpers.views.KwalaRadioButton
                    android:id="@+id/filter_activity_2_time_limit_radio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:onClick="onFilter2RadioButtonClicked"

                    android:text="@string/filter_activity_time_limit"
                    android:textSize="20sp"
                    android:textColor="@color/kWhite"
                    />

            </RadioGroup>

            <RadioGroup
                android:id="@+id/filter_activity_2_male_female_radio_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <com.kwala.app.helpers.views.KwalaRadioButton
                    android:id="@+id/filter_activity_2_male_radiobutton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:onClick="onFilter2RadioButtonClicked"

                    android:text="@string/filter_activity_male"
                    android:textSize="20sp"
                    android:textColor="@color/kWhite"
                    />

                <com.kwala.app.helpers.views.KwalaRadioButton
                    android:id="@+id/filter_activity_2_female_radiobutton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:onClick="onFilter2RadioButtonClicked"

                    android:text="@string/filter_activity_female"
                    android:textSize="20sp"
                    android:textColor="@color/kWhite"
                    />

            </RadioGroup>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"

            android:background="@color/filterLineColor"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"

            android:text="@string/filter_activity_interests"
            android:textSize="24sp"
            android:textColor="@color/kWhite"
            />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/create_filter_2_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_gravity="center_horizontal"

            app:layoutManager="GridLayoutManager"
            app:spanCount="3"

            android:padding="10dp"
            android:clipToPadding="false">

        </android.support.v7.widget.RecyclerView>

    </LinearLayout>

</RelativeLayout>